--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
+body {
+    background-color: #fff5d7;
+}
+
 h1 {
     text-align: center;
+}
+
+button {
+    background-color: #ff5e6c;
+    padding: 1em 2.5em;
+    border-radius: 4px;
+    border: 3px solid transparent;
+    font-weight: bold;
+}
+
+button:hover {
+    border: 3px solid black;
+}
+
+button:active {
+    transform: scale(0.9);
 }
 
 #btn-container {
@@ -14,7 +34,7 @@ h1 {
 
 #score-container {
     text-align: center;
-    background-color: aqua;
+    margin-top: 5em;
 }
 
 #player-comp-container {
